atualização de links

--- a/README.Rmd
+++ b/README.Rmd
@@ -13,6 +13,8 @@ knitr::opts_chunk$set(
 
 # EMISSÃO DE CO~2~ DO SOLO EM ÁREAS AGRÍCOLAS: ABORDAGEM EM APRENDIZADO DE MÁQUINA ESTATÍSTICO
 
+## Auto: [Alan Rodrigo Panosso](www.fcav.unesp.br/alan)
+
 ## Objetivo
 
 O objetivo do repositório `tese-fco2-ml-2023` é promover a transparência, a reprodutibilidade e a colaboração em pesquisa. Você é incentivado a explorar o código-fonte, utilizar os dados e contribuir com melhorias, se desejar. Sinta-se à vontade para entrar em contato caso tenha alguma dúvida ou precise de mais informações sobre minha pesquisa.
@@ -23,5 +25,5 @@ Contribuições são bem-vindas! Se você deseja colaborar com melhorias nos có
 
 ## Licença
 
-Este projeto é licenciado sob `MIT License`. Consulte o arquivo [LICENSE]("https://github.com/arpanosso/tese-fco2-ml-2023/blob/master/LICENSE.md") para obter mais detalhes.
+Este projeto é licenciado sob `MIT License`. Consulte o arquivo [LICENSE](https://github.com/arpanosso/tese-fco2-ml-2023/blob/master/LICENSE.md) para obter mais detalhes.
 
