--- a/README.Rmd
+++ b/README.Rmd
@@ -114,18 +114,31 @@ dplyr::glimpse(oco2_br)
 
 
 ```{r}
-# Mapas no R
 library(geobr)
 library(tidyverse)
 library(ggspatial)
+```
 
-estados <- read_state(code_state = "all")
 
-muni <- read_municipality()
+```{r}
+# estados <- read_state(code_state = "all")
+# write_rds(estados,"data/estados.rds")
+estados <- read_rds("data/estados.rds")
+```
+
+
+```{r}
+# muni <- read_municipality()
+# write_rds(muni,"data/municipios.rds")
+muni <- read_rds("data/municipios.rds")
 ms <- muni %>% 
   filter(abbrev_state == "MS")
 sp <- muni %>% 
   filter(abbrev_state == "SP")
+
+sp_ms <- muni %>% 
+  filter(abbrev_state == "SP" | abbrev_state == "MS")
+
 
 fsp<-if_else(sp$name_muni == "Jaboticabal" | 
              sp$name_muni == "Guariba" |
@@ -140,20 +153,20 @@ fms<-if_else(ms$name_muni == "Aparecida Do Taboado" |
              ms$name_muni == "Dourados"   
              ,"red","lightyellow")
 
-sp_ <- read_state() %>% 
+sp_ <- estados %>% 
       filter(abbrev_state == "SP")
 
-ms_ <- read_state() %>% 
+ms_ <- estados %>% 
       filter(abbrev_state == "MS")
 
-ggplot(estados) + 
+ggplot(sp_ms) + 
   geom_sf(fill="lightyellow")+
   theme_minimal() + 
   annotation_scale(location="bl")+
   annotation_north_arrow(location="tr",
                          style = north_arrow_nautical(),
                          width = unit(2,"cm"),
-                         height = unit(2,"cm"))+
+                         height = unit(2,"cm")) +
   geom_sf(data= sp, fill=fsp,col=fsp) +
   geom_sf(data=sp_,fill="transparent") +
   geom_sf(data= ms, fill=fms,col=fms) +
