--- a/README.Rmd
+++ b/README.Rmd
@@ -130,14 +130,6 @@ fco2_qqplot | (fco2_histograma)/(fco2_boxplot)
 ```
 
 
-
-### Conhecendo a base de dados de concentração de CO~2~ atmosférico, oriundo do sensor NASA-OCO2.
-```{r}
-help(oco2_br)
-dplyr::glimpse(oco2_br)
-```
-
-
 ```{r}
 # library(geobr)
 library(tidyverse)
@@ -146,8 +138,10 @@ library(ggspatial)
 
 
 ```{r}
+# brasil_geobr <- geobr::read_country()
 # estados <- read_state(code_state = "all")
 # write_rds(estados,"data/estados.rds")
+# write_rds(brasil_geobr,"data/brasil_geobr.rds")
 estados <- read_rds("data/estados.rds")
 ```
 
@@ -197,3 +191,74 @@ ggplot(sp_ms) +
   geom_sf(data= ms, fill=fms,col=fms) +
   geom_sf(data=ms_,fill="transparent")
 ```
+
+### Conhecendo a base de dados de concentração de CO~2~ atmosférico, oriundo do sensor NASA-OCO2.
+```{r}
+help(oco2_br)
+dplyr::glimpse(oco2_br)
+```
+
+### Breve resumo do banco de dados de X~CO2~
+```{r}
+skimr::skim(oco2_br)
+```
+
+
+
+### Manipulando a base `oco2_br` para criação das variáveis temporais e ajuste de unidade de xco2.
+
+```{r}
+oco2_br <- oco2_br  %>% 
+         dplyr::mutate(
+           xco2 = xco2_moles_mole_1*1e06,
+           data = lubridate::ymd_hms(time_yyyymmddhhmmss),
+           ano = lubridate::year(data),
+           mes = lubridate::month(data),
+           dia = lubridate::day(data),
+           dia_semana = lubridate::wday(data))
+oco2_br$ano %>% unique()
+```
+
+Mapa das leituras do satélite OCO2-NASA
+
+```{r}
+source("R/graficos.R")
+brasil_geobr <- readr::read_rds("data/brasil_geobr.rds")
+brasil_geobr %>% 
+  ggplot2::ggplot() +
+  ggplot2::geom_sf(fill="white", color="black",
+          size=.15, show.legend = FALSE) +
+  tema_mapa() +
+  ggplot2::geom_point(data=oco2_br %>%  
+                        dplyr::sample_n(20000) ,
+             ggplot2::aes(x=longitude,y=latitude),
+             shape=1,
+             col="red",
+             alpha=01)+
+  ggplot2::labs(x="Longitude",y="Latitude")
+```
+
+
+```{r,fig.width=15, fig.height=10}
+ggplot2::theme_set(ggplot2::theme_bw())
+xco2_histograma <- oco2_br %>% 
+  tidyr::drop_na() %>% 
+  ggplot2::ggplot(ggplot2::aes(x=xco2, y=..density..)) +
+  ggplot2::geom_histogram(col="black",fill="gray") +
+  ggplot2::geom_density(fill="green",alpha=.08)
+
+xco2_boxplot <- oco2_br %>% 
+  tidyr::drop_na() %>% 
+  ggplot2::ggplot(ggplot2::aes(x=xco2)) +
+  ggplot2::geom_boxplot(fill="aquamarine4") + 
+  ggplot2::coord_cartesian(ylim=c(-.9,.9))
+
+xco2_qqplot <- oco2_br %>% 
+  tidyr::drop_na() %>% 
+  ggplot2::ggplot(ggplot2::aes(sample=xco2)) +
+  ggplot2::stat_qq(shape=1,size=1,color="black")+
+  ggplot2::stat_qq_line(col="purple",lwd=2)
+
+xco2_qqplot | (xco2_histograma)/(xco2_boxplot)
+```
+
