--- a/README.Rmd
+++ b/README.Rmd
@@ -53,10 +53,13 @@ Possíveis problemas na instalação do pacote podem ser sanados com os seguinte
 # Sys.getenv("GITHUB_PAT")
 ```
 
-### Carregando o pacote
+### Carregando os pacotes
 
 ```{r}
 library(fco2r)
+library(tidyverse)
+library(patchwork)
+library(ggspatial)
 ```
 
 
@@ -66,7 +69,7 @@ Base proveniente de ensaios de campo.
 
 ```{r}
 help(data_fco2)
-dplyr::glimpse(data_fco2)
+glimpse(data_fco2)
 ```
 
 
@@ -79,26 +82,24 @@ skimr::skim(data_fco2)
 ### Alguns gráficos a respeito de nossa variável alvo, emissão de CO~2~ do solo (FCO~2~).
 
 ```{r,fig.width=15, fig.height=10}
-library(magrittr)
-library(patchwork)
-ggplot2::theme_set(ggplot2::theme_bw())
+theme_set(theme_bw())
 fco2_histograma <- data_fco2 %>% 
-  tidyr::drop_na() %>% 
-  ggplot2::ggplot(ggplot2::aes(x=FCO2, y=..density..)) +
-  ggplot2::geom_histogram(col="black",fill="gray") +
-  ggplot2::geom_density(fill="blue",alpha=.08)
+  drop_na() %>% 
+  ggplot(aes(x=FCO2, y=..density..)) +
+  geom_histogram(col="black",fill="gray") +
+  geom_density(fill="blue",alpha=.08)
 
 fco2_boxplot <- data_fco2 %>% 
-  tidyr::drop_na() %>% 
-  ggplot2::ggplot(ggplot2::aes(x=FCO2)) +
-  ggplot2::geom_boxplot(fill="lightgray") + 
-  ggplot2::coord_cartesian(ylim=c(-.9,.9))
+  drop_na() %>% 
+  ggplot(aes(x=FCO2)) +
+  geom_boxplot(fill="lightgray") + 
+  coord_cartesian(ylim=c(-.9,.9))
 
 fco2_qqplot <- data_fco2 %>% 
-  tidyr::drop_na() %>% 
-  ggplot2::ggplot(ggplot2::aes(sample=FCO2)) +
-  ggplot2::stat_qq(shape=1,size=1,color="black")+
-  ggplot2::stat_qq_line(col="red")
+  drop_na() %>% 
+  ggplot(aes(sample=FCO2)) +
+  stat_qq(shape=1,size=1,color="black")+
+  stat_qq_line(col="red")
 
 fco2_qqplot | (fco2_histograma)/(fco2_boxplot)
 ```
@@ -106,36 +107,28 @@ fco2_qqplot | (fco2_histograma)/(fco2_boxplot)
 ### Aplicando a transformação logarítmica nos dados de FCO~2~
 
 ```{r,fig.width=15, fig.height=10}
-ggplot2::theme_set(ggplot2::theme_bw())
+ggplot2::theme_set(theme_bw())
 
 fco2_histograma <- data_fco2 %>% 
-  tidyr::drop_na() %>% 
-  ggplot2::ggplot(ggplot2::aes(x=log(FCO2), y=..density..)) +
-  ggplot2::geom_histogram(col="black",fill="gray") +
-  ggplot2::geom_density(fill="red",alpha=.08)
+  drop_na() %>% 
+  ggplot(aes(x=log(FCO2), y=..density..)) +
+  geom_histogram(col="black",fill="gray") +
+  geom_density(fill="red",alpha=.08)
 
 fco2_boxplot <- data_fco2 %>% 
-  tidyr::drop_na() %>% 
-  ggplot2::ggplot(ggplot2::aes(x=log(FCO2))) +
-  ggplot2::geom_boxplot(fill="orange") + 
-  ggplot2::coord_cartesian(ylim=c(-.9,.9))
+  drop_na() %>% 
+  ggplot(aes(x=log(FCO2))) +
+  geom_boxplot(fill="orange") + 
+  coord_cartesian(ylim=c(-.9,.9))
 
 fco2_qqplot <- data_fco2 %>% 
-  tidyr::drop_na() %>% 
-  ggplot2::ggplot(ggplot2::aes(sample=log(FCO2))) +
-  ggplot2::stat_qq(shape=1,size=1,color="black")+
-  ggplot2::stat_qq_line(col="blue")
+  drop_na() %>% 
+  ggplot(aes(sample=log(FCO2))) +
+  stat_qq(shape=1,size=1,color="black")+
+  stat_qq_line(col="blue")
 
 fco2_qqplot | (fco2_histograma)/(fco2_boxplot)
 ```
-
-
-```{r}
-# library(geobr)
-library(tidyverse)
-library(ggspatial)
-```
-
 
 ```{r}
 # brasil_geobr <- geobr::read_country()
@@ -150,14 +143,15 @@ estados <- read_rds("data/estados.rds")
 # muni <- read_municipality()
 # write_rds(muni,"data/municipios.rds")
 muni <- read_rds("data/municipios.rds")
-ms <- muni %>% 
-  filter(abbrev_state == "MS")
+
 sp <- muni %>% 
   filter(abbrev_state == "SP")
 
+ms <- muni %>% 
+  filter(abbrev_state == "MS")
+
 sp_ms <- muni %>% 
   filter(abbrev_state == "SP" | abbrev_state == "MS")
-
 
 fsp<-if_else(sp$name_muni == "Jaboticabal" | 
              sp$name_muni == "Guariba" |
@@ -195,7 +189,7 @@ ggplot(sp_ms) +
 ### Conhecendo a base de dados de concentração de CO~2~ atmosférico, oriundo do sensor NASA-OCO2.
 ```{r}
 help(oco2_br)
-dplyr::glimpse(oco2_br)
+glimpse(oco2_br)
 ```
 
 ### Breve resumo do banco de dados de X~CO2~
@@ -203,61 +197,57 @@ dplyr::glimpse(oco2_br)
 skimr::skim(oco2_br)
 ```
 
-
-
 ### Manipulando a base `oco2_br` para criação das variáveis temporais e ajuste de unidade de xco2.
 
 ```{r}
 oco2_br <- oco2_br  %>% 
-         dplyr::mutate(
+        mutate(
            xco2 = xco2_moles_mole_1*1e06,
-           data = lubridate::ymd_hms(time_yyyymmddhhmmss),
-           ano = lubridate::year(data),
-           mes = lubridate::month(data),
-           dia = lubridate::day(data),
-           dia_semana = lubridate::wday(data))
-oco2_br$ano %>% unique()
+           data = ymd_hms(time_yyyymmddhhmmss),
+           ano = year(data),
+           mes = month(data),
+           dia = day(data),
+           dia_semana = wday(data))
 ```
 
 Mapa das leituras do satélite OCO2-NASA
 
 ```{r}
 source("R/graficos.R")
-brasil_geobr <- readr::read_rds("data/brasil_geobr.rds")
+brasil_geobr <- read_rds("data/brasil_geobr.rds")
 brasil_geobr %>% 
-  ggplot2::ggplot() +
-  ggplot2::geom_sf(fill="white", color="black",
+  ggplot() +
+  geom_sf(fill="white", color="black",
           size=.15, show.legend = FALSE) +
   tema_mapa() +
-  ggplot2::geom_point(data=oco2_br %>%  
-                        dplyr::sample_n(20000) ,
-             ggplot2::aes(x=longitude,y=latitude),
+  geom_point(data=oco2_br %>%  
+                        sample_n(20000) ,
+             aes(x=longitude,y=latitude),
              shape=1,
              col="red",
              alpha=01)+
-  ggplot2::labs(x="Longitude",y="Latitude")
+  labs(x="Longitude",y="Latitude")
 ```
 
 
 ```{r,fig.width=15, fig.height=10}
-ggplot2::theme_set(ggplot2::theme_bw())
 xco2_histograma <- oco2_br %>% 
-  tidyr::drop_na() %>% 
-  ggplot2::ggplot(ggplot2::aes(x=xco2, y=..density..)) +
-  ggplot2::geom_histogram(col="black",fill="gray") +
-  ggplot2::geom_density(fill="green",alpha=.08)
+  drop_na() %>% 
+  ggplot(aes(x=xco2, y=..density..)) +
+  geom_histogram(col="black",fill="gray") +
+  geom_density(fill="aquamarine2",alpha=.08)
 
 xco2_boxplot <- oco2_br %>% 
-  tidyr::drop_na() %>% 
-  ggplot2::ggplot(ggplot2::aes(x=xco2)) +
-  ggplot2::geom_boxplot(fill="aquamarine4") + 
-  ggplot2::coord_cartesian(ylim=c(-.9,.9))
+  drop_na() %>% 
+  ggplot(aes(x=xco2)) +
+  geom_boxplot(fill="aquamarine4") + 
+  coord_cartesian(ylim=c(-.9,.9))
 
 xco2_qqplot <- oco2_br %>% 
-  tidyr::drop_na() %>% 
-  ggplot2::ggplot(ggplot2::aes(sample=xco2)) +
-  ggplot2::stat_qq(shape=1,size=1,color="black")+
-  ggplot2::stat_qq_line(col="purple",lwd=2)
+  drop_na() %>% 
+  ggplot(aes(sample=xco2)) +
+  stat_qq(shape=1,size=1,color="black")+
+  stat_qq_line(col="purple",lwd=2)
 
 xco2_qqplot | (xco2_histograma)/(xco2_boxplot)
 ```
