--- a/README.Rmd
+++ b/README.Rmd
@@ -34,7 +34,7 @@ Este projeto é licenciado sob `MIT License`. Consulte o arquivo [LICENSE](https
 
 Apresentação do pacote `fco2r` construído para  facilitar a divulgação e análise dos resultados obtidos ao longo de mais de 20 anos de ensaios em campo. Este pacote, permite a visualização dos dados, a execução de análises estatísticas avançadas e a geração de gráficos interativos para tornar os resultados mais acessíveis e compreensíveis para a comunidade científica.
 
-### Intalação
+### Instalação
 
 Você pode instalar uma versão de desenvolvimento do pacote `fco2r` a partir do [GitHub](https://github.com/) com os seguintes comandos:
 
@@ -60,6 +60,13 @@ library(fco2r)
 library(tidyverse)
 library(patchwork)
 library(ggspatial)
+library(readxl)
+library(skimr)
+library(tidymodels)
+library(ISLR)
+library(modeldata)
+library(vip)
+library(ggpubr)
 ```
 
 
@@ -251,3 +258,115 @@ xco2_qqplot <- oco2_br %>%
 
 xco2_qqplot | (xco2_histograma)/(xco2_boxplot)
 ```
+
+```{r}
+# Definindo o plano de multisession
+future::plan("multisession")
+```
+
+
+```{r}
+oco2_br  %>%  
+  ggplot(aes(x=data,y=XCO2)) +
+  geom_point(shape=21,color="black",fill="gray") +
+  geom_smooth(method = "lm") +
+  stat_regline_equation(ggplot2::aes(
+  label =  paste(..eq.label.., ..rr.label.., sep = "*plain(\",\")~~")))
+```
+
+
+```{r}
+visdat::vis_miss(data_fco2)
+```
+
+## Listando as datas dos arquivos
+```{r}
+lista_data_fco2 <- unique(data_fco2$data)
+lista_data_oco2 <- unique(oco2_br$data)
+datas_fco2 <- paste0(lubridate::year(lista_data_fco2),"-",lubridate::month(lista_data_fco2)) %>% unique()
+
+datas_oco2 <- paste0(lubridate::year(lista_data_oco2),"-",lubridate::month(lista_data_oco2)) %>% unique()
+datas <- datas_fco2[datas_fco2 %in% datas_oco2]
+```
+
+
+Chaves para mesclagem
+
+```{r}
+fco2 <- data_fco2 %>% 
+  mutate(ano_mes = paste0(lubridate::year(data),"-",lubridate::month(data))) %>% 
+  dplyr::filter(ano_mes %in% datas)
+
+xco2 <- oco2_br %>%   
+  mutate(ano_mes=paste0(ano,"-",mes)) %>% 
+  dplyr::filter(ano_mes %in% datas)
+```
+
+Coordenadas das cidades
+
+```{r}
+unique(xco2$ano_mes)[unique(xco2$ano_mes) %>% order()] == 
+unique(fco2$ano_mes)[unique(fco2$ano_mes) %>% order()]
+```
+
+
+
+```{r}
+data_set <- left_join(fco2 %>% 
+            mutate(ano = lubridate::year(data),
+                   mes = lubridate::month(data)
+                   ), 
+          xco2 %>% 
+            select(data,mes,dia,longitude,latitude,XCO2,fluorescence_radiance_757nm_idp_ph_sec_1_m_2_sr_1_um_1,fluorescence_radiance_771nm_idp_ph_sec_1_m_2_sr_1_um_1, ano_mes), by = "ano_mes") %>% 
+  mutate(dist = sqrt((longitude-(-51.423519))^2+(latitude-(-20.362911))^2),
+         SIF = (fluorescence_radiance_757nm_idp_ph_sec_1_m_2_sr_1_um_1*2.6250912*10^(-19)  + 1.5*fluorescence_radiance_771nm_idp_ph_sec_1_m_2_sr_1_um_1* 2.57743*10^(-19))/2)
+
+
+data_set<-data_set %>%
+  select(-fluorescence_radiance_757nm_idp_ph_sec_1_m_2_sr_1_um_1, -fluorescence_radiance_771nm_idp_ph_sec_1_m_2_sr_1_um_1 )  %>% 
+  filter(dist <= .16, FCO2 <= 30 ) 
+```
+
+```{r}
+visdat::vis_miss(data_set)
+```
+
+```{r}
+tab_medias <- data_set %>% 
+  # mutate(SIF = ifelse(SIF <=0, mean(data_set$SIF, na.rm=TRUE),SIF)) %>% 
+  group_by(ano_mes, cultura) %>% 
+  summarise(FCO2 = mean(FCO2, na.rm=TRUE),
+            XCO2 = mean(XCO2, na.rm=TRUE),
+            SIF = mean(SIF, na.rm=TRUE))
+
+tab_medias %>% 
+  ggplot(aes(x=XCO2, y=SIF,color=cultura)) +
+  geom_point()+
+  geom_smooth(method = "lm")+
+  theme_bw()
+```
+
+```{r}
+tab_medias %>% 
+  ggplot(aes(x=XCO2, y=FCO2,col=cultura)) +
+  geom_point()+
+  geom_smooth(method = "lm")+
+  theme_bw()
+```
+
+```{r}
+tab_medias %>% 
+  ggplot(aes(x=FCO2, y=SIF, color=cultura)) +
+  geom_point()+
+  geom_smooth(method = "lm") +
+  theme_bw()
+```
+
+```{r}
+data_set_temporal <- data_set %>% 
+  filter(experimento == "Temporal")
+
+data_set_espacial <- data_set %>% 
+  filter(experimento == "Espacial")
+```
+
