--- a/README.Rmd
+++ b/README.Rmd
@@ -356,7 +356,7 @@ tab_medias %>%
 
 ```{r}
 tab_medias %>% 
-  ggplot(aes(x=FCO2, y=SIF, color=cultura)) +
+  ggplot(aes(y=FCO2, x=SIF, color=cultura)) +
   geom_point()+
   geom_smooth(method = "lm") +
   theme_bw()
@@ -370,3 +370,607 @@ data_set_espacial <- data_set %>%
   filter(experimento == "Espacial")
 ```
 
+# Primeira Aproximação
+
+- Alvo: FCO2
+- Features: Atributos do Solo
+- Modelo mais simples e geral
+- Testar 3 métodos baseados em árvores de decisão
+
+
+### visualização do banco de dados 
+
+```{r}
+visdat::vis_miss(data_fco2)
+```
+
+### Definindo a Base de treino e teste
+```{r}
+data_set_ml <- data_fco2 %>% sample_n(100) # <-------
+fco2_initial_split <- initial_split(data_set_ml, prop = 0.75)
+```
+
+```{r}
+fco2_train <- training(fco2_initial_split)
+# fco2_test <- testing(fco2_initial_split)
+# visdat::vis_miss(fco2_test)
+fco2_train  %>% 
+  ggplot(aes(x=FCO2, y=..density..))+
+  geom_histogram(bins = 30, color="black",  fill="lightgray")+
+  geom_density(alpha=.05,fill="red")+
+  theme_bw() +
+  labs(x="FCO2 - treino", y = "Densidade")
+```
+
+
+```{r}
+fco2_testing <- testing(fco2_initial_split)
+fco2_testing  %>% 
+  ggplot(aes(x=FCO2, y=..density..))+
+  geom_histogram(bins = 30, color="black",  fill="lightgray")+
+  geom_density(alpha=.05,fill="blue")+
+  theme_bw() +
+  labs(x="FCO2 - teste", y = "Densidade")
+```
+
+```{r}
+fco2_train   %>%    select(FCO2:HLIFS) %>% 
+  select(where(is.numeric)) %>%
+  drop_na() %>% 
+  cor()  %>%  
+  corrplot::corrplot()
+```
+### data prep
+```{r}
+fco2_recipe <- recipe(FCO2 ~ ., 
+                      data = fco2_train %>% 
+                        select(cultura, manejo, cobertura, FCO2:HLIFS)
+) %>%  
+  step_normalize(all_numeric_predictors())  %>% 
+  step_novel(all_nominal_predictors()) %>% 
+  step_zv(all_predictors()) %>%
+  #step_naomit(c(Ts, Us)) %>% 
+  step_impute_median(where(is.numeric)) %>% # inputação da mediana nos numéricos
+  #step_poly(c(Us,Ts), degree = 2)  %>%  
+  step_dummy(all_nominal_predictors())
+bake(prep(fco2_recipe), new_data = NULL)
+```
+
+```{r}
+visdat::vis_miss(bake(prep(fco2_recipe), new_data = NULL))
+```
+### Reamostragem definida e será padrão para todos os modelos
+
+```{r}
+fco2_resamples <- vfold_cv(fco2_train, v = 10) # 10 fold
+grid <- grid_regular(
+  penalty(range = c(-8, 0)),
+  levels = 20
+)
+```
+
+## Árvore de Decisão
+
+### Definição do modelo
+```{r}
+fco2_dt_model <- decision_tree(
+  cost_complexity = tune(),
+  tree_depth = tune(),
+  min_n = tune()
+)  %>%  
+  set_mode("regression")  %>%  
+  set_engine("rpart")
+```
+
+
+### Workflow
+```{r}
+fco2_dt_wf <- workflow()   %>%  
+  add_model(fco2_dt_model) %>% 
+  add_recipe(fco2_recipe)
+```
+
+### Criando a matriz (grid) com os valores de hiperparâmetros a serem testados
+
+```{r}
+grid_dt <- grid_random(
+  cost_complexity(c(-6, -4)),
+  tree_depth(range = c(8, 18)),
+  min_n(range = c(42, 52)),
+  size = 2 # <-----------------------------
+)
+glimpse(grid_dt)
+```
+### Tuning de hiperparâmetros
+
+```{r}
+fco2_dt_tune_grid <- tune_grid(
+  fco2_dt_wf,
+  resamples = fco2_resamples,
+  grid = grid_dt,
+  metrics = metric_set(rmse)
+)
+```
+
+```{r}
+autoplot(fco2_dt_tune_grid)
+```
+```{r}
+collect_metrics(fco2_dt_tune_grid)
+```
+
+
+### Desempenho dos modelos finais
+
+```{r}
+fco2_dt_best_params <- select_best(fco2_dt_tune_grid, "rmse")
+fco2_dt_wf <- fco2_dt_wf %>% finalize_workflow(fco2_dt_best_params)
+fco2_dt_last_fit <- last_fit(fco2_dt_wf, fco2_initial_split)
+```
+
+### Criando os preditos
+
+```{r}
+fco2_test_preds <- bind_rows(
+  collect_predictions(fco2_dt_last_fit)  %>%   mutate(modelo = "dt")
+)
+
+fco2_test <- testing(fco2_initial_split)
+visdat::vis_miss(fco2_test)
+```
+
+```{r}
+fco2_test_preds %>% 
+  ggplot(aes(x=.pred, y=FCO2)) +
+  geom_point()+
+  theme_bw() +
+  geom_smooth(method = "lm") +
+  stat_regline_equation(ggplot2::aes(
+  label =  paste(..eq.label.., ..rr.label.., sep = "*plain(\",\")~~"))) 
+```
+
+# Importância
+
+```{r}
+fco2_dt_last_fit_model <-fco2_dt_last_fit$.workflow[[1]]$fit$fit
+vip(fco2_dt_last_fit_model)
+```
+
+## Métricas
+
+```{r}
+da <- fco2_test_preds %>% 
+  filter(FCO2 > 0, .pred>0 )
+
+my_r <- cor(da$FCO2,da$.pred)
+my_r2 <- my_r*my_r
+my_mse <- Metrics::mse(da$FCO2,da$.pred)
+my_rmse <- Metrics::rmse(da$FCO2,
+                         da$.pred)
+my_mae <- Metrics::mae(da$FCO2,da$.pred)
+my_mape <- Metrics::mape(da$FCO2,da$.pred)*100
+
+
+fco2_test_preds %>% 
+  ggplot(aes(x=FCO2,y=.pred))+
+  geom_point()+
+  geom_smooth(method = "lm")+
+  stat_regline_equation(ggplot2::aes(
+    label =  paste(..eq.label.., ..rr.label.., sep = "*plain(\",\")~~")),size=5)
+  # ggplot2::annotate('text',x=10.4,y=16.7,label=paste0('RMSE = ',round(my_rmse,2),', MAPE = '
+  #                                                     ,round(my_mape,2),'%'),size=5)+
+  # theme_bw()
+vector_of_metrics <- c(r=my_r, R2=my_r2, MSE=my_mse, RMSE=my_rmse, MAE=my_mae, MAPE=my_mape)
+print(data.frame(vector_of_metrics))
+```
+
+## Random Forest
+
+### Definição do modelo
+```{r}
+fco2_rf_model <- rand_forest(
+  min_n = tune(),
+  mtry = tune(),
+  trees = tune()
+)   %>%  
+  set_mode("regression")  %>% 
+  set_engine("randomForest")
+```
+
+### Workflow
+
+```{r}
+fco2_rf_wf <- workflow()   %>%  
+  add_model(fco2_rf_model) %>%  
+  add_recipe(fco2_recipe)
+```
+
+### Tune
+```{r}
+grid_rf <- grid_random(
+  min_n(range = c(20, 30)),
+  mtry(range = c(10,20)),
+  trees(range = c(769,1500) ),
+  size = 2 #<-----------------------
+)
+```
+
+```{r}
+fco2_rf_tune_grid <- tune_grid(
+ fco2_rf_wf,
+  resamples = fco2_resamples,
+  grid = grid_rf,
+  metrics = metric_set(rmse)
+) 
+autoplot(fco2_rf_tune_grid)
+```
+
+```{r}
+collect_metrics(fco2_rf_tune_grid)
+```
+
+### Desempenho modelo final
+```{r}
+fco2_rf_best_params <- select_best(fco2_rf_tune_grid, "rmse")
+fco2_rf_wf <- fco2_rf_wf %>% finalize_workflow(fco2_rf_best_params)
+fco2_rf_last_fit <- last_fit(fco2_rf_wf, fco2_initial_split)
+```
+
+### Criando os preditos
+
+```{r}
+fco2_test_preds <- bind_rows(
+  collect_predictions(fco2_rf_last_fit)  %>%   mutate(modelo = "rf")
+)
+
+fco2_test <- testing(fco2_initial_split)
+visdat::vis_miss(fco2_test)
+```
+
+```{r}
+fco2_test_preds %>% 
+  ggplot(aes(x=.pred, y=FCO2)) +
+  geom_point()+
+  theme_bw() +
+  geom_smooth(method = "lm") +
+  stat_regline_equation(ggplot2::aes(
+  label =  paste(..eq.label.., ..rr.label.., sep = "*plain(\",\")~~"))) 
+```
+
+# Importância
+
+```{r}
+fco2_rf_last_fit_model <-fco2_rf_last_fit$.workflow[[1]]$fit$fit
+vip(fco2_rf_last_fit_model)
+```
+## Métricas
+
+```{r}
+da <- fco2_test_preds %>% 
+  filter(FCO2 > 0, .pred>0 )
+
+my_r <- cor(da$FCO2,da$.pred)
+my_r2 <- my_r*my_r
+my_mse <- Metrics::mse(da$FCO2,da$.pred)
+my_rmse <- Metrics::rmse(da$FCO2,
+                         da$.pred)
+my_mae <- Metrics::mae(da$FCO2,da$.pred)
+my_mape <- Metrics::mape(da$FCO2,da$.pred)*100
+
+
+fco2_test_preds %>% 
+  ggplot(aes(x=FCO2,y=.pred))+
+  geom_point()+
+  geom_smooth(method = "lm")+
+  stat_regline_equation(ggplot2::aes(
+    label =  paste(..eq.label.., ..rr.label.., sep = "*plain(\",\")~~")),size=5)
+  # ggplot2::annotate('text',x=10.4,y=16.7,label=paste0('RMSE = ',round(my_rmse,2),', MAPE = '
+  #                                                     ,round(my_mape,2),'%'),size=5)+
+  # theme_bw()
+vector_of_metrics <- c(r=my_r, R2=my_r2, MSE=my_mse, RMSE=my_rmse, MAE=my_mae, MAPE=my_mape)
+print(data.frame(vector_of_metrics))
+```
+
+
+## Boosting gradient tree (xgb)
+
+```{r}
+cores = 4
+fco2_xgb_model <- boost_tree(
+  mtry = 0.8, 
+  trees = tune(), # <---------------
+  min_n = 5, 
+  tree_depth = 4,
+  loss_reduction = 0, # lambda
+  learn_rate = tune(), # epsilon
+  sample_size = 0.8
+)  %>%   
+  set_mode("regression")  %>% 
+  set_engine("xgboost", nthread = cores, counts = FALSE)
+```
+
+```{r}
+fco2_xgb_wf <- workflow()  %>%  
+  add_model(fco2_xgb_model) %>%  
+  add_recipe(fco2_recipe)
+```
+
+
+```{r}
+grid_xgb <- expand.grid(
+  learn_rate =  c(0.05), #learn_rate =  c(0.05, 0.3),
+  trees = c(2, 250) #trees = c(2, 250, 500)
+)
+```
+
+#### Passo 1
+
+```{r}
+fco2_xgb_tune_grid <- tune_grid(
+ fco2_xgb_wf,
+  resamples = fco2_resamples,
+  grid = grid_xgb,
+  metrics = metric_set(rmse)
+)
+autoplot(fco2_xgb_tune_grid)
+```
+
+```{r}
+fco2_xgb_tune_grid   %>%   show_best(metric = "rmse", n = 6)
+```
+
+```{r}
+fco2_xgb_select_best_passo1 <- fco2_xgb_tune_grid %>% 
+  select_best(metric = "rmse")
+fco2_xgb_select_best_passo1
+```
+#### Passo 2
+```{r}
+fco2_xgb_model <- boost_tree(
+  mtry = 0.8,
+  trees = fco2_xgb_select_best_passo1$trees,
+  min_n = tune(),
+  tree_depth = tune(), 
+  loss_reduction = 0, 
+  learn_rate = fco2_xgb_select_best_passo1$learn_rate, 
+  sample_size = 0.8
+) %>% 
+  set_mode("regression")  %>% 
+  set_engine("xgboost", nthread = cores, counts = FALSE)
+
+#### Workflow
+fco2_xgb_wf <- workflow() %>%  
+    add_model(fco2_xgb_model)   %>%   
+    add_recipe(fco2_recipe)
+
+#### Grid
+fco2_xgb_grid <- expand.grid(
+  tree_depth = c(1, 3), # tree_depth = c(1, 3, 4), 
+  min_n = c(5, 30) # min_n = c(5, 30, 60)
+)
+
+fco2_xgb_tune_grid <- fco2_xgb_wf   %>%   
+  tune_grid(
+    resamples =fco2_resamples,
+    grid = fco2_xgb_grid,
+    control = control_grid(save_pred = TRUE, verbose = FALSE, allow_par = TRUE),
+    metrics = metric_set(rmse)
+  )
+
+#### Melhores hiperparâmetros
+autoplot(fco2_xgb_tune_grid)
+```
+```{r}
+fco2_xgb_tune_grid  %>%   show_best(metric = "rmse", n = 5)
+fco2_xgb_select_best_passo2 <- fco2_xgb_tune_grid  %>%   select_best(metric = "rmse")
+fco2_xgb_select_best_passo2
+```
+
+## Passo 3
+```{r}
+fco2_xgb_model <- boost_tree(
+  mtry = 0.8,
+  trees = fco2_xgb_select_best_passo1$trees,
+  min_n = fco2_xgb_select_best_passo2$min_n,
+  tree_depth = fco2_xgb_select_best_passo2$tree_depth, 
+  loss_reduction =tune(), 
+  learn_rate = fco2_xgb_select_best_passo1$learn_rate, 
+  sample_size = 0.8
+)  %>%  
+  set_mode("regression")  %>%  
+  set_engine("xgboost", nthread = cores, counts = FALSE)
+
+#### Workflow
+fco2_xgb_wf <- workflow()  %>%   
+    add_model(fco2_xgb_model)  %>%   
+    add_recipe(fco2_recipe)
+
+#### Grid
+fco2_xgb_grid <- expand.grid(
+  loss_reduction = c(0.01, 0.05) #c(0.01, 0.05, 1, 2, 4, 8)
+)
+
+fco2_xgb_tune_grid <- fco2_xgb_wf   %>%   
+  tune_grid(
+    resamples = fco2_resamples,
+    grid = fco2_xgb_grid,
+    control = control_grid(save_pred = TRUE, verbose = FALSE, allow_par = TRUE),
+    metrics = metric_set(rmse)
+  )
+
+#### Melhores hiperparâmetros
+autoplot(fco2_xgb_tune_grid)
+```
+```{r}
+fco2_xgb_tune_grid   %>%   show_best(metric = "rmse", n = 5)
+fco2_xgb_select_best_passo3 <- fco2_xgb_tune_grid %>% select_best(metric = "rmse")
+fco2_xgb_select_best_passo3
+```
+
+### Passo 4
+```{r}
+fco2_xgb_model <- boost_tree(
+  mtry = tune(),
+  trees = fco2_xgb_select_best_passo1$trees,
+  min_n = fco2_xgb_select_best_passo2$min_n,
+  tree_depth = fco2_xgb_select_best_passo2$tree_depth, 
+  loss_reduction = fco2_xgb_select_best_passo3$loss_reduction, 
+  learn_rate = fco2_xgb_select_best_passo1$learn_rate, 
+  sample_size = tune()
+)%>%  
+  set_mode("regression")  |> 
+  set_engine("xgboost", nthread = cores, counts = FALSE)
+
+#### Workflow
+fco2_xgb_wf <- workflow()  %>%   
+    add_model(fco2_xgb_model)  %>%   
+    add_recipe(fco2_recipe)
+
+#### Grid
+fco2_xgb_grid <- expand.grid(
+    sample_size = seq(0.5, 1.0, length.out = 2), ## <---
+    mtry = seq(0.1, 1.0, length.out = 2) ## <---
+)
+
+fco2_xgb_tune_grid <- fco2_xgb_wf   %>%   
+  tune_grid(
+    resamples = fco2_resamples,
+    grid = fco2_xgb_grid,
+    control = control_grid(save_pred = TRUE, verbose = FALSE, allow_par = TRUE),
+    metrics = metric_set(rmse)
+  )
+
+autoplot(fco2_xgb_tune_grid)
+```
+
+```{r}
+fco2_xgb_tune_grid  |>  show_best(metric = "rmse", n = 5)
+fco2_xgb_select_best_passo4 <- fco2_xgb_tune_grid   %>%   select_best(metric = "rmse")
+fco2_xgb_select_best_passo4
+```
+
+
+### Passo 5
+
+```{r}
+fco2_xgb_model <- boost_tree(
+  mtry = fco2_xgb_select_best_passo4$mtry,
+  trees = tune(),
+  min_n = fco2_xgb_select_best_passo2$min_n,
+  tree_depth = fco2_xgb_select_best_passo2$tree_depth, 
+  loss_reduction = fco2_xgb_select_best_passo3$loss_reduction, 
+  learn_rate = tune(), 
+  sample_size = fco2_xgb_select_best_passo4$sample_size
+) |> 
+  set_mode("regression")  %>%  
+  set_engine("xgboost", nthread = cores, counts = FALSE)
+
+#### Workflow
+fco2_xgb_wf <- workflow() %>%   
+    add_model(fco2_xgb_model)  %>%   
+    add_recipe(fco2_recipe)
+
+#### Grid
+fco2_xgb_grid <- expand.grid(
+    learn_rate = c(0.05, 0.10), #c(0.05, 0.10, 0.15, 0.25),
+    trees =c(100, 250) #c(100, 250, 500)
+)
+
+fco2_xgb_tune_grid <- fco2_xgb_wf   %>%   
+  tune_grid(
+    resamples = fco2_resamples,
+    grid = fco2_xgb_grid,
+    control = control_grid(save_pred = TRUE, verbose = FALSE, allow_par = TRUE),
+    metrics = metric_set(rmse)
+  )
+
+#### Melhores hiperparâmetros
+autoplot(fco2_xgb_tune_grid)
+```
+
+```{r}
+fco2_xgb_tune_grid  %>%   show_best(metric = "rmse", n = 5)
+fco2_xgb_select_best_passo5 <- fco2_xgb_tune_grid   %>%   select_best(metric = "rmse")
+fco2_xgb_select_best_passo5
+```
+
+## Desempenho dos modelos finais
+
+```{r}
+fco2_xgb_model <- boost_tree(
+  mtry = fco2_xgb_select_best_passo4$mtry,
+  trees = fco2_xgb_select_best_passo5$trees,
+  min_n = fco2_xgb_select_best_passo2$min_n,
+  tree_depth = fco2_xgb_select_best_passo2$tree_depth, 
+  loss_reduction = fco2_xgb_select_best_passo3$loss_reduction, 
+  learn_rate = fco2_xgb_select_best_passo5$learn_rate, 
+  sample_size = fco2_xgb_select_best_passo4$sample_size
+) %>%  
+  set_mode("regression")  %>%  
+  set_engine("xgboost", nthread = cores, counts = FALSE)
+```
+
+```{r}
+df <- data.frame(
+  mtry = fco2_xgb_select_best_passo4$mtry,
+  trees = fco2_xgb_select_best_passo5$trees,
+  min_n = fco2_xgb_select_best_passo2$min_n,
+  tree_depth = fco2_xgb_select_best_passo2$tree_depth, 
+  loss_reduction = fco2_xgb_select_best_passo3$loss_reduction, 
+  learn_rate = fco2_xgb_select_best_passo5$learn_rate, 
+  sample_size = fco2_xgb_select_best_passo4$sample_size
+)
+fco2_xgb_wf <- fco2_xgb_wf %>% finalize_workflow(df) # <------
+fco2_xgb_last_fit <- last_fit(fco2_xgb_wf, fco2_initial_split) # <--------
+```
+
+  ## Criar Preditos
+  
+```{r}
+fco2_test_preds <- bind_rows(
+  collect_predictions(fco2_xgb_last_fit)  %>%   mutate(modelo = "xgb")
+)
+```
+  
+```{r}
+fco2_test_preds %>% 
+  ggplot(aes(x=.pred, y=FCO2)) +
+  geom_point()+
+  theme_bw() +
+  geom_smooth(method = "lm") +
+  stat_regline_equation(ggplot2::aes(
+  label =  paste(..eq.label.., ..rr.label.., sep = "*plain(\",\")~~")))
+```
+
+```{r}
+fco2_xgb_last_fit_model <-fco2_xgb_last_fit$.workflow[[1]]$fit$fit
+vip(fco2_xgb_last_fit_model)
+```
+
+## Métricas
+
+```{r}
+da <- fco2_test_preds %>% 
+  filter(FCO2 > 0, .pred>0 )
+
+my_r <- cor(da$FCO2,da$.pred)
+my_r2 <- my_r*my_r
+my_mse <- Metrics::mse(da$FCO2,da$.pred)
+my_rmse <- Metrics::rmse(da$FCO2,
+                         da$.pred)
+my_mae <- Metrics::mae(da$FCO2,da$.pred)
+my_mape <- Metrics::mape(da$FCO2,da$.pred)*100
+
+
+fco2_test_preds %>% 
+  ggplot(aes(x=FCO2,y=.pred))+
+  geom_point()+
+  geom_smooth(method = "lm")+
+  stat_regline_equation(ggplot2::aes(
+    label =  paste(..eq.label.., ..rr.label.., sep = "*plain(\",\")~~")),size=5)
+  # ggplot2::annotate('text',x=10.4,y=16.7,label=paste0('RMSE = ',round(my_rmse,2),', MAPE = '
+  #                                                     ,round(my_mape,2),'%'),size=5)+
+  # theme_bw()
+vector_of_metrics <- c(r=my_r, R2=my_r2, MSE=my_mse, RMSE=my_rmse, MAE=my_mae, MAPE=my_mape)
+print(data.frame(vector_of_metrics))
+```
