--- a/README.Rmd
+++ b/README.Rmd
@@ -410,7 +410,7 @@ visdat::vis_miss(data_set_temporal)
 
 ### Definindo a Base de treino e teste
 ```{r}
-data_set_ml <- data_set_temporal %>% sample_n(100) # <-------
+data_set_ml <- data_set_temporal # <-------
 fco2_initial_split <- initial_split(data_set_ml, prop = 0.75)
 ```
 
@@ -501,7 +501,7 @@ grid_dt <- grid_random(
   cost_complexity(c(-6, -4)),
   tree_depth(range = c(8, 18)),
   min_n(range = c(42, 52)),
-  size = 2 # <-----------------------------
+  size = 10 # <-----------------------------
 )
 glimpse(grid_dt)
 ```
@@ -615,7 +615,7 @@ grid_rf <- grid_random(
   min_n(range = c(20, 30)),
   mtry(range = c(10,20)),
   trees(range = c(769,1500) ),
-  size = 2 #<-----------------------
+  size = 10 #<-----------------------
 )
 ```
 
@@ -722,8 +722,8 @@ fco2_xgb_wf <- workflow()  %>%
 
 ```{r}
 grid_xgb <- expand.grid(
-  learn_rate =  c(0.05), #learn_rate =  c(0.05, 0.3),
-  trees = c(2, 250) #trees = c(2, 250, 500)
+  learn_rate =  c(0.05, 0.3),
+  trees = c(2, 250, 500)
 )
 ```
 
@@ -769,8 +769,8 @@ fco2_xgb_wf <- workflow() %>%
 
 #### Grid
 fco2_xgb_grid <- expand.grid(
-  tree_depth = c(1, 3), # tree_depth = c(1, 3, 4), 
-  min_n = c(5, 30) # min_n = c(5, 30, 60)
+  tree_depth = c(1, 3, 4), 
+  min_n = c(5, 30, 60)
 )
 
 fco2_xgb_tune_grid <- fco2_xgb_wf   %>%   
@@ -811,7 +811,7 @@ fco2_xgb_wf <- workflow()  %>%
 
 #### Grid
 fco2_xgb_grid <- expand.grid(
-  loss_reduction = c(0.01, 0.05) #c(0.01, 0.05, 1, 2, 4, 8)
+  loss_reduction = c(0.01, 0.05, 1, 2, 4, 8)
 )
 
 fco2_xgb_tune_grid <- fco2_xgb_wf   %>%   
@@ -896,8 +896,8 @@ fco2_xgb_wf <- workflow() %>%
 
 #### Grid
 fco2_xgb_grid <- expand.grid(
-    learn_rate = c(0.05, 0.10), #c(0.05, 0.10, 0.15, 0.25),
-    trees =c(100, 250) #c(100, 250, 500)
+    learn_rate = c(0.05, 0.10, 0.15, 0.25),
+    trees = c(100, 250, 500)
 )
 
 fco2_xgb_tune_grid <- fco2_xgb_wf   %>%   
